--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,11 @@ build-backend = "setuptools.build_meta"
 
 [project.scripts]
 mcp-proxy = "mcp_proxy.__main__:main"
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+addopts = [
+    "--import-mode=importlib",
+]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
