--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ build-backend = "setuptools.build_meta"
 [project.scripts]
 mcp-proxy = "mcp_proxy.__main__:main"
 
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.3.3",
+    "pytest-asyncio>=0.25.0",
+]
+
 [tool.pytest.ini_options]
 pythonpath = "src"
 addopts = [
