--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,9 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101", "INP001"]
 
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
 [tool.ruff]
 line-length = 100
 
