feat: serve a SSE server proxying a STDIO server (#8)
* Add library for serving an sse server proxying a stdio server

* Change context manager for running server in the background thread

* Fix lint errors in new test fixture

* Update starlette response routing

* Fix ruff format errors

* Fix ruff format errors

* Fix typos in SseServerSettigs

* Rename host to bind host and update to localhost

* Update for new import location

* Update imports based on ruff rules

* Update src/mcp_proxy/sse_server.py

Co-authored-by: Guillaume Raille <guillaume.raille@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,10 @@ classifiers = [
 ]
 version = "0.2.2"
 requires-python = ">=3.11"
-dependencies = ["mcp"]
+dependencies = [
+    "mcp",
+    "uvicorn>=0.34.0",
+]
 
 [build-system]
 requires = ["setuptools"]
