chore: bump mcp version (#16)
- Bump mcp: 1.1.2 -> 1.2.0
- Assume version constraints
- Update imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,9 @@ classifiers = [
     "Topic :: Utilities",
     "Typing :: Typed",
 ]
-version = "0.3.0"
+version = "0.3.1"
 requires-python = ">=3.11"
-dependencies = ["mcp", "uvicorn>=0.34.0"]
+dependencies = ["mcp>=1.2.0,<2", "uvicorn>=0.34.0"]
 
 [build-system]
 requires = ["setuptools"]
