--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,6 +106,19 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - run: uv run --frozen coverage report --fail-under 83
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: [lint, coverage, mypy]
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Build Docker image
+        uses: docker/build-push-action@ca877d9245402d1537745e0e356eab47c3520991 # v6.13.0
+        with:
+          context: .
+          push: false
+          tags: "${{ github.repository }}:devel"
+
   # https://github.com/marketplace/actions/alls-green#why used for branch protection checks
   check:
     if: always()
